--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,3 +25,8 @@ spring:
 
   flyway:
     schemas: transactions
+
+metadata:
+  name: Transactions API
+  description: Technical test case for pismo
+  version: 1.0.0
